[package]
name = "slim_owning_ref"
version = "0.6.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>", "Noam Ta Shma <noam.tashma@gmail.com>", "Luke Peterson <luke@infoplatter.com>"]
license = "MIT"

description = "A library for creating references that carry their owner with them."
readme = "README.md"

repository = "https://github.com/noamtashma/owning-ref-rs"
keywords = ["reference", "sibling", "field", "owning"]

[lib]
name = "owning_ref"

[dependencies]
stable_deref_trait = { version = "1.2.0", default-features = false, features = ["alloc"] }
maybe-dangling = "0.1.1"

[features]
default = ["std"]
std = ["stable_deref_trait/std"]
